# s4

./: .gitignore  README.md  pyproject.toml  test.py
s4/: api.py  main.py  range.py  test_api.py
s4/metadata/: __init__.py  memory.py  noop.py  redis.py
s4/storage/: __init__.py  memory.py  s3.py
