[tool.poetry]
name = "s4"
version = "0.1.0"
description = ""
authors = ["Adrian Garcia Badaracco <1755071+adriangb@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "*"
anyio = "^4.3.0"
fsspec = "^2024.3.1"
uvicorn = "^0.29.0"
redis = "^5.0.3"
aioaws = { git = "https://github.com/adriangb/aioaws.git", rev = "main" }

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^8.1.1"
boto3 = "^1.34.84"
boto3-stubs = "^1.34.84"
ruff = "^0.3.7"
pyright = "^1.1.358"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
